# synthetic-crash-generation

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
config/: __init__.py  schema.py
notebooks/: day1_image_gen.ipynb  demo_pipeline.ipynb
scripts/: prepare_dashcam_data.py  train_dashcam_lora.py
tests/: setup.py
utils/: __init__.py  bbox_prompt.py  bbox_sequence_generator.py  controlnet_generator.py  ctrl_crash_generator.py  depth_generator.py  evaluator.py  image_generator.py  parser.py  pipeline.py  video_generator.py  vram_manager.py  wan_video_generator.py
